@@ -10,6 +10,11 @@ Revision history for Perl extension App::Sqitch
        `$SQITCH_PAGER` environment variable trumps all. Thanks to Yati Sagade
        for the pull request (#329).
      - Documented the `core.editor` configuration variable.
+     - Updated PostgreSQL registry detection to avoid errors when not running
+       Sqitch as a superuser. Done by looking for the `changes` table in the
+       `pg_tables` view instead of looking for the registry schema in the
+       `pg_namespace` catalog table. Thanks to @djk447 for the pull request
+       (#307).
 
 0.9995 2016-07-27T09:23:55Z
      - Taught the `add` command not to ignore the `--change` option.
